--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <p>
                             I have two young girls and wanted to <a href="http://blog.swilliams.me/words/2013/3/21/things-i-learned-while-making-a-simple-game-for-my-daughters">make a simple game for them</a>. It’s a basic top-down Zelda like game. I recorded their voices as sound effects.</p>
                             <p>If I had to go back and do it all over again, I'd heavily consider doing game development full-time.</p>
-                            <p>I also gained a new appreciation for the skill and effor that goes in to creating game art.
+                            <p>I also gained a new appreciation for the skill and effort that goes in to creating game art.
                             </p>
                             <ul class="tags">
                                 <li>iOS 5</li>
